# zodongchan

./: 1일차과제.ipynb  Admin(과제).html  Chaper0913_task.ipynb  Chaper1416_task.ipynb  Chapter1720_task.ipynb  README.md  adimin(과제).html
1assignment/: 1assignment.py
1assignment/templates/: 1assignment.html
1회차과제/: app.py
fastapi/: README.md  pyproject.toml
html과제/: profile.html
templates/: index.html
