[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["zodongchan <ejsvkgkarj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py314"